--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <style>
+
+      #root{
+        width: 100%;
+      }
+
+      body{
+        width: 100%;
+        display: flex;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
